--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Social link profile</title>
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Inter" />
-    <link rel="favicon" href="./assets/images/favicon-32x32.png" />
+    <link rel="stylesheet" href="./assets/images/favicon-32x32.png" />
   </head>
   <body>
     <main>
