html-structure-commit

--- a/index.html
+++ b/index.html
@@ -21,13 +21,25 @@
           <span>London, United Kingdom</span>
           <p>"Front-end developer and avid reader."</p>
         </div>
-        <div class="links-container">
-          <div class="link">Github</div>
-          <div class="link">Frontend Mentor</div>
-          <div class="link">LinkedIn</div>
-          <div class="link">Twitter</div>
-          <div class="link">Instagram</div>
-        </div>
+        <ul class="links-container">
+          <li class="link">
+            <a href="https://github.io" target="_blank">Github</a>
+          </li>
+          <li class="link">
+            <a href="https://frontentmentor.io" target="_blank"
+              >Frontend Mentor</a
+            >
+          </li>
+          <li class="link">
+            <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+          </li>
+          <li class="link">
+            <a href="https://twitter.com" target="_blank">Twitter</a>
+          </li>
+          <li class="link">
+            <a href="https://instagram.com" target="_blank">Instagram</a>
+          </li>
+        </ul>
       </div>
     </main>
   </body>
